@@ -19,8 +19,6 @@
 package org.fenixedu.academic.servlet;
 
 import java.util.Properties;
-import java.util.Set;
-import java.util.concurrent.atomic.AtomicInteger;
 
 import javax.mail.Session;
 import javax.mail.Transport;
@@ -31,14 +29,11 @@ import javax.servlet.http.HttpServletRequest;
 
 import org.fenixedu.academic.FenixEduAcademicConfiguration;
 import org.fenixedu.academic.domain.Installation;
-import org.fenixedu.academic.domain.Shift;
 import org.fenixedu.academic.domain.organizationalStructure.UnitNamePart;
-import org.fenixedu.academic.domain.schedule.shiftCapacity.ShiftCapacityType;
 import org.fenixedu.academic.service.StudentWarningsDefaultCheckers;
 import org.fenixedu.academic.service.StudentWarningsService;
 import org.fenixedu.academic.ui.struts.action.externalServices.PhoneValidationUtils;
 import org.fenixedu.bennu.core.api.SystemResource;
-import org.fenixedu.bennu.core.domain.Bennu;
 import org.fenixedu.bennu.core.rest.Healthcheck;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -59,8 +54,6 @@ public class FenixInitializer implements ServletContextListener {
     @Atomic(mode = TxMode.READ)
     public void contextInitialized(ServletContextEvent event) {
 
-        initDefaultShiftCapacities();
-
         Installation.ensureInstallation();
         loadUnitNames();
         startContactValidationServices();
@@ -70,26 +63,6 @@ public class FenixInitializer implements ServletContextListener {
         registerHealthchecks();
         registerDefaultStudentWarningCheckers();
 
-    }
-
-    @Atomic
-    private void initDefaultShiftCapacities() {
-        ShiftCapacityType.findOrCreateDefault();
-
-        final Set<Shift> shifts = Bennu.getInstance().getShiftsSet();
-        logger.info("START Default Shift Capacity init");
-        logger.info(shifts.size() + " Shifts (total)");
-
-        final AtomicInteger counter = new AtomicInteger();
-
-        shifts.forEach(s -> {
-            if (s.initDefaultShiftCapacity()) {
-                counter.incrementAndGet();
-            }
-        });
-
-        logger.info(counter.get() + " Shift Capacity created");
-        logger.info("END Default Shift Capacity init");
     }
 
     private void registerDefaultStudentWarningCheckers() {
